--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,38 @@
 /* styles.css */
 body {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
     height: 100vh;
     margin: 0;
     background-color: #f0f0f0;
     font-family: Arial, sans-serif;
+    /* gap: 300px; */
+}
+
+.banner {
+    background-color: #2196F3;
+    color: #fff;
+    padding: 20px 0;
+    width: 100%;
+    text-align: center;
+}
+
+.banner-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+}
+
+.title {
+    font-size: 32px;
+    font-weight: bold;
+}
+
+.logo img {
+    max-width: 100px;
+    height: auto;
 }
 
 .file-box {
@@ -16,6 +42,7 @@ body {
     border-radius: 8px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     text-align: center;
+    margin: auto;
 }
 
 .drag-drop-area {
