--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,8 @@ body {
     height: 100vh;
     margin: 0;
     background-color: #f0f0f0;
-    font-family: Arial, sans-serif;
+    font-family: "Museo Sans", sans-serif;
+    font-weight: 400;
     /* gap: 300px; */
 }
 
@@ -16,6 +17,7 @@ body {
     padding: 20px 0;
     width: 100%;
     text-align: center;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .banner-content {
@@ -27,11 +29,11 @@ body {
 
 .title {
     font-size: 32px;
-    font-weight: bold;
+    /* font-weight: bold; */
 }
 
 .logo img {
-    max-width: 100px;
+    max-width: 150px;
     height: auto;
 }
 
