--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
 
 .banner-content {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding: 0 20px;
 }
