--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ body {
 }
 
 #viewer-container {
-    margin: 0;
+    /* margin: 0;
     padding: 0;
     box-sizing: border-box;
     position: fixed;
@@ -98,6 +98,12 @@ body {
     outline: none;
     height: 100vh;
     width: 100vw;
-    display: none;
+    display: none; */
+    visibility: visible;
   }
+
+canvas {
+    height: 5vh;
+    width: 5vh;
+}
   
