--- a/styles.css
+++ b/styles.css
@@ -89,21 +89,17 @@ body {
 }
 
 #viewer-container {
-    /* margin: 0;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     position: fixed;
     top: 0;
     left: 0;
     outline: none;
-    height: 100vh;
-    width: 100vw;
-    display: none; */
-    visibility: visible;
   }
 
 canvas {
-    height: 5vh;
-    width: 5vh;
+    height: 100vh;
+    width: 100vw;
 }
   
