--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
 /* styles.css */
+
+/* Global styling for the entire webpage */
 body {
     display: flex;
     flex-direction: column;
@@ -11,8 +13,9 @@ body {
     /* gap: 300px; */
 }
 
+/* Styling for the banner section */
 .banner {
-    background-color: #2196F3;
+    background-color: #292928;
     color: #fff;
     padding: 20px 0;
     width: 100%;
@@ -20,6 +23,7 @@ body {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+/* Styling for the content within the banner */
 .banner-content {
     display: flex;
     justify-content: space-around;
@@ -27,22 +31,26 @@ body {
     padding: 0 20px;
 }
 
+/* Styling for the title within the banner */
 .title {
     font-size: 28px;
     /* font-weight: bold; */
 }
 
+/* Styling for the logo image within the banner */
 .logo img {
     max-width: 150px;
     height: auto;
 }
 
+/* Styling for the padding area */
 .pad {
     min-height: 150px
 }
 
+/* Styling for the file box section */
 .file-box {
-    width: 300px;
+    width: 400px;
     padding: 20px;
     background-color: #fff;
     border-radius: 8px;
@@ -51,31 +59,35 @@ body {
     margin: auto;
 }
 
+/* Styling for the drag and drop area */
 .drag-drop-area {
     width: 100%;
-    height: 200px; /* Increased size */
+    height: 300px; /* Increased size */
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #e3f2fd;
-    border: 2px dashed #2196F3;
+    background-color: #e0e0df;
+    border: 2px dashed #292928;
     border-radius: 8px;
     cursor: pointer;
     transition: background-color 0.3s, border-color 0.3s;
 }
 
+/* Styling when the drag and drop area is highlighted */
 .drag-drop-area.highlight {
     background-color: #bbdefb;
-    border-color: #1565c0;
+    border-color: #b4b4b4;
 }
 
+/* Styling for button container */
 .button-container {
     margin-top: 15px;
 }
 
+/* Styling for the "Open File Explorer" button */
 #openFileExplorer {
     padding: 10px 20px;
-    background-color: #2196F3;
+    background-color: #292928;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -84,10 +96,12 @@ body {
     margin-top: 20px;
 }
 
+/* Styling for the "Open File Explorer" button when mouse is hovering over */
 #openFileExplorer:hover {
-    background-color: #1565c0;
+    background-color: #616160;
 }
 
+/* Styling for the viewer container */
 #viewer-container {
     margin: 0;
     padding: 0;
@@ -98,6 +112,7 @@ body {
     outline: none;
   }
 
+/* Styling for canvas within the viewer */
 canvas {
     height: 100vh;
     width: 100vw;
